V4.3 incorporación de API para ping y archivo para configuración de conectores en Power Apps
